<resources>
    <string name="app_name">Zaliczeniowa</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="add_task_button">Add Task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="priority_hint">Priority</string>
    <string name="cancel_button">Cancel</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="edit_task_button">Edit</string>
    <string name="delete_btn">Delete</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
</resources>
